Add buildSrc and update build.gradle.kts

--- a/checks/build.gradle
+++ b/checks/build.gradle
@@ -12,14 +12,14 @@ lintOptions {
 
 dependencies {
     // For a description of the below dependencies, see the main project README
-    compileOnly "com.android.tools.lint:lint-api:$lintVersion"
+    compileOnly "com.android.tools.lint:lint-api:${Versions.lint}"
     // You typically don't need this one:
-    compileOnly "com.android.tools.lint:lint-checks:$lintVersion"
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    compileOnly "com.android.tools.lint:lint-checks:${Versions.lint}"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${Versions.kotlin}"
 
     testImplementation "junit:junit:4.13.2"
-    testImplementation "com.android.tools.lint:lint:$lintVersion"
-    testImplementation "com.android.tools.lint:lint-tests:$lintVersion"
+    testImplementation "com.android.tools.lint:lint:${Versions.lint}"
+    testImplementation "com.android.tools.lint:lint-tests:${Versions.lint}"
 }
 
 sourceCompatibility = "1.8"
